# dafi-sentinel

./: .gitignore  README.md  pyproject.toml
dafi_sentinel/api/: __init__.py  app.py  audit_enums.py  auth.py  schemas.py  services.py
dafi_sentinel/charts/: renderer.py  validation.py
dafi_sentinel/domain/: models.py
dafi_sentinel/ingestion/: __init__.py  service.py
dafi_sentinel/ml/: analysis.py
dafi_sentinel/orchestration/: __init__.py  graph.py  production_graph.py
dafi_sentinel/retrieval/: contracts.py  pgvector.py
dafi_sentinel/security/: __init__.py  policy.py
dafi_sentinel/storage/: contracts.py
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: client.ts  queries.ts
frontend/src/auth/: AuthGate.tsx  useAuth.tsx
frontend/src/components/: ApiErrorMessage.tsx  ErrorBoundary.tsx
frontend/src/pages/: AuditsPage.tsx  ChartsPage.tsx  EvidenceDetailPage.tsx  EvidenceListPage.tsx  LoginPage.tsx  QAPage.tsx  RolesPage.tsx
frontend/src/test/: api_error_message.test.tsx  auth.test.tsx  csp_toggle.test.ts  error_boundary.test.tsx  (+4 more)
infra/podman/: compose.yaml
openspec/: config.yaml
tests/dafi_sentinel/: test_actor_store.py  test_api_auth.py  test_api_endpoints.py  test_audit_enums.py  test_audit_repository_session_index.py  test_cache_control.py  test_chart_renderer.py  test_chart_validation.py  test_charts_edge_cases.py  test_charts_endpoint_validation.py  test_cookie_bearer_precedence.py  test_deprecation.py  test_foundation_contracts.py  test_ingestion_edges.py  test_ingestion_services.py  test_inmemory_rlock.py  test_inspect_user_request.py  test_lifespan.py  test_login_error_no_leak.py  test_login_session_id_hash.py  test_ml_analysis.py  test_ml_edge_cases.py  test_orchestration.py  test_orchestration_audit_timestamps.py  test_orchestration_package_exports.py  test_orchestration_system_approver.py  test_pgvector_adapter.py  test_pgvector_sql_identifier.py  test_pr1_no_external_infra.py  test_production_graph.py  test_rate_limit.py  test_redaction.py  test_request_id.py  test_schema_caps.py  test_security_middleware.py  test_security_policy.py  test_sweeper_clock_injection.py  test_validation_collect_errors.py
(+33 files in other folders)
