[project]
name = "dafi-sentinel"
version = "0.1.0"
description = "Foundation contracts for DAFI Sentinel."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "itsdangerous>=2.2.0",
    "langgraph>=1.2.9",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "passlib[argon2]>=1.7.4",
    "pgvector>=0.3",
    "psycopg[binary]>=3.2",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.32",
    "scikit-learn>=1.9.0",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests/dafi_sentinel"]
# R3 F1: harden the test runner so a forgotten ``pytest.mark.skip`` /
# ``xfail`` cannot silently shrink the suite. Pytest 8+ already treats
# ``pytest.mark.only`` as a hard failure by default, so the
# ``--strict-markers`` / ``--strict-config`` pair and the
# ``-p no:cacheprovider`` plugin toggle cover the parallel intent
# of vitest's ``forbidOnly: true``.
addopts = ["--strict-markers", "--strict-config", "-p", "no:cacheprovider", "--tb=short", "-ra"]
